# improv

./: README.md  empty.world  improv.cabal  improv.sh  mkDance  monitor  stack.yaml  testing.tidal  turtle.launch  turtlebot_world.launch  user_instructions.txt
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/flag-cache/: Boolean-0.2.4-FMYsUOyamHA1SvlALbvorI  BoundedChan-1.0.3.0-4JzWP3OklUcCneRsi7r5OJ  HaXml-1.25.3-FWQAuB12BJOFPkTQ2EGoJq  HsOpenSSL-0.11.4.8-1oNCsrDcNP77diHIz2jQJU  MemoTrie-0.6.7-BQ9xkZLBNYcCjvEu2ePp3B  NumInstances-1.4-DChjG3nybAvEzjDFb225Gz  ROS-geometry-msgs-0.4-8VAt8iGbBsDDns5dVZ9ia0  ROS-std-msgs-0.4-Ki443Visi3Z1YSGbMk5GCA  ROS-std-srvs-msgs-0.4-BJ4JNJHgKakIeCrIl0ycsr  ROS-turtlesim-msgs-0.4-FIgnwn57wlgC978pxCOZu1  SafeSemaphore-0.10.1-JDvItKST9nQJl8OwRKYJEJ  aeson-1.0.2.1-1PgNnQdZpa7BG8cq9P3bMU  asn1-encoding-0.9.5-KUHI8uAj6xB6pAOjpbkWqW  asn1-parse-0.9.4-2NRCGuW18La3OBU0Nft3Zz  asn1-types-0.3.2-IaUfgwDM8aq6EviQzJfcYl  async-2.1.1-4n6HEMPJR2eJK0JpvCfuPK  attoparsec-0.13.1.0-HCAgpBrKCLJ5li8FbfXxE1  base-compat-0.9.1-B9geVZFtCvE8ERS7UcvkRz  base-orphans-0.5.4-ABoxiBf7nXc7Qqh66CgYc9  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  blaze-builder-0.4.0.2-CGB8BvrFgghHy5bLy0SFOg  byteable-0.1.1-2lU1pexQSLj1KbNO17UifQ  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  case-insensitive-1.2.0.8-JH9TmxTHpl01TJ0h86Xqcf  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  cryptonite-0.21-BpO3rZu57xu84Yfxwqkb5K  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  data-default-generics-0.3-B8BhuwTGVQrEVu284UH2Kt  dlist-0.8.0.2-6Wnps4GD7EFnRucVzXIFD  filemanip-0.3.6.3-39GGNCiHahb1wSL6fkG6wy  hashable-1.2.5.0-F4MWeNuv2sjJRqBd2T5ul4  haxr-3000.11.2-HkIvnlCK4SqAH3GCUWmKln  hourglass-0.2.10-pnbvWmzfcY1rOFETQEmcY  http-common-0.8.2.0-CJXewAwxX1jDNjAwLVJIOr  http-streams-0.8.4.0-EzrO9cAwKtVFPzrqi5IFkE  http-types-0.9.1-5F2YjZNOfOTCho80klHZFM  io-streams-1.3.6.0-4EVWBhw25UlK3e8khXUkTI  io-streams-haproxy-1.0.0.1-EBBsK59yHH2GeORnTu1SiT  lens-family-core-1.2.1-LZ6TX4t6mGs5hzfIChMtCb  (+41 more)
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/pkgdb/: HsOpenSSL-0.11.4.8-1oNCsrDcNP77diHIz2jQJU.conf  package.cache  (+14 more)
app/: Main.hs
doc/moco_paper/: Makefile  NilGladMattLaV_18.tex
doc/moco_paper/final_submission/: refs.bib
doc/moco_poster/: MOCO_poster.tex  Makefile  Nilles_poster.tex  slide.md  slide.tex  slide.vrb
doc/somatic_paper/: inexperienced_programming.txt  somatic_practice.docx  somatic_practice.md  template.tex
doc/somatic_paper/latex/: mdpi.cls  papers.bib  template.tex  walker image.pptx
moco_paper/: Makefile  NilGladMattLaV_18.tex  abstract.md  cognitive_dimensions.md  moco_paper.md  paper_notes.md  source.md
moco_paper/acmart-master/: Makefile  NilGladMattLaV_18.tex  sample-sigconf.tex
moco_paper/chase_senior_thesis/: writeup.html
moco_paper/writeup/: writeup.md
roshask/: roshask.cabal
roshask/Examples/AddTwoIntsClient/: AddTwoIntsClient.cabal
roshask/Examples/NodeCompose/: NodeCompose.cabal
roshask/Examples/Turtle/: Turtle.cabal
src/: Demo.hs  Improv.hs  Parser.hs  Parser_with_speed_backup.hs  RobotSpec.hs  Roomba.hs  test.imp
test/: Spec.hs  TestParser.hs
tidal_music/: test.tidal  tidal_mapping.gamecontroller.amgp  xbox_mapping.gamecontroller.amgp
web_interface/: app.py
web_interface/static/: style.css
web_interface/templates/: main.html
(+545 files in other folders)
