name:                improv
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexandroid000/improv
license:             BSD3
license-file:        LICENSE
author:              Alli Nilles
maintainer:          nilles2@illinois.edu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Improv
                     , RobotSpec
                     , Demo
  build-depends:       base >= 4.7 && < 5
                     , numeric-prelude >= 0.4
                     , roshask >= 0.4
                     , ROS-geometry-msgs
                     , ROS-std-msgs
                     , data-default-generics
                     , lens-family-core
  default-language:    Haskell2010
  other-extensions:    GADTs

executable improv-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , improv
                     , roshask >= 0.4
                     , ROS-geometry-msgs
                     , ROS-std-msgs
                     , data-default-generics
                     , lens-family-core
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/alexandroid000/improv
