name:                improv
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexandroid000/improv
license:             BSD3
license-file:        LICENSE
author:              Alli Nilles
maintainer:          nilles2@illinois.edu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Improv
                     , RobotSpec
                     , Parser
  build-depends:       base >= 4.7 && < 6
                     , numeric-prelude >= 0.4
                     , roshask >= 0.4
                     , ROS-geometry-msgs
                     , ROS-std-msgs
                     , data-default-generics
                     , tls <= 1.3.9
                     , HsOpenSSL >= 0.11.4.8
                     , lens-family-core
                     , containers
                     , split
                     , parsec
                     , mtl
  default-language:    Haskell2010
  other-extensions:    GADTs

executable improv-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 6
                     , improv
                     , roshask >= 0.4
                     , ROS-geometry-msgs
                     , tls <= 1.3.9
                     , HsOpenSSL >= 0.11.4.8
                     , ROS-std-msgs
                     , data-default-generics
                     , lens-family-core
                     , split
                     , containers
                     , split
                     , parsec
                     , mtl
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/alexandroid000/improv
